wescamp.py: Update from add-on server

--- a/For_Power/_main.cfg
+++ b/For_Power/_main.cfg
@@ -31,7 +31,7 @@
 
 	icon=data/add-ons/For_Power/images/bookshelf-full.png
 	image=data/add-ons/For_Power/images/magefemale.png
-	description=_ "Follow the life story of a young mage Clare, from a common orchish assault, throught an assassinating someone who she liked to the revenge by the path which you choose."
+	description=_ "Follow the tale of the young mage Clare, through an orcish assault on her village, to assassinating someone she liked, and beyond.. Lead her through her battles and choose her path of revenge to end the tale."
 
 	first_scenario=01_Defend_the_village
 	{FP_ABOUT}
