--- a/For_Power/scenarios/02_Flight.cfg
+++ b/For_Power/scenarios/02_Flight.cfg
@@ -141,14 +141,14 @@
 			speaker=Lemyr
 			message=_"Yes sir."
 		[/message]
-		{PLACE_IMAGE scenery/signpost.png 44 29}
+		{PLACE_IMAGE scenery/signpost.png 43 21}
 	[/event]
 
 	[event]
 		name=moveto
 		[filter]
 			id=Lemyr
-			x,y=44,29
+			x,y=43,21
 		[/filter]
 		[message]
 			speaker=Glacyn
@@ -162,6 +162,12 @@
 			speaker=Clare
 			message=_"Keep an eye on yourself."
 		[/message]
+    # keep side 2' gold for later
+    [store_gold]
+      side=2
+      variable=glacyn_gold
+    [/store_gold]
+    {VARIABLE_OP glacyn_gold multiply 0.4}
 		[endlevel]
 		  result=victory
 		  bonus=no
