--- a/For_Power/scenarios/04_Return.cfg
+++ b/For_Power/scenarios/04_Return.cfg
@@ -97,7 +97,7 @@
 	{STORY4}
 	{DEFAULT_SCHEDULE}
 	
-	{AI_CONTROLLER em 1 5 ()}
+	#{AI_CONTROLLER em 1 5 ()}
 
 	[side]
 		side=1
@@ -182,7 +182,7 @@
 	
 	[side]
 	  side=5
-		controller=ai
+		controller=human
 		no_leader=yes
 		team_name=villagers
 		user_team_name=_"Earl Menvan's troops"
@@ -191,25 +191,25 @@
 		{FLAG_VARIANT loyalist}
 		{GOLD 130 120 110}
 		{INCOME 5 3 1}
-		[ai]
-		  recruitment_pattern=fighter,fighter,archer,archer,scout
-		  village_value=0
-		  villages_per_scout=0
-		  [goal]
-		    name=protect_my_unit
-		    [criteria]
-		      id=Rheran
-		    [/criteria]
-		    value=5
-		  [/goal]
-		  [goal]
-		    name=target_location
-		    [criteria]
-		      x,y=36,8
-		    [/criteria]
-		    value=5
-		  [/goal]
-		[/ai]
+		#[ai]
+		  #recruitment_pattern=fighter,fighter,archer,archer,scout
+		  #village_value=0
+		  #villages_per_scout=0
+		  #[goal]
+		    #name=protect_my_unit
+		    #[criteria]
+		      #id=Rheran
+		    #[/criteria]
+		    #value=5
+		  #[/goal]
+		  #[goal]
+		    #name=target_location
+		    #[criteria]
+		      #x,y=36,8
+		    #[/criteria]
+		    #value=5
+		  #[/goal]
+		#[/ai]
 	[/side]
 	
 	{OWNER_OF_VILLAGE 11 25 1}
@@ -241,6 +241,11 @@
     {GIVE_VILLAGES1}
     {CAPTURE_VILLAGE 5 35 29}
     {CAPTURE_VILLAGE 5 42 23}
+    # give side 2 gold from scenario 2
+    [gold]
+      side=2
+      amount=$glacyn_gold
+    [/gold]
 		[objectives]
 			side=1
 			[objective]
@@ -252,7 +257,7 @@
 				bonus=yes
 				carryover_percentage=40
 			[/gold_carryover]
-			{AI_CONTROLLER_NOTE}
+			#{AI_CONTROLLER_NOTE}
 		[/objectives]
   [/event]
   
