--- a/For_Power/utils/chapter1.cfg
+++ b/For_Power/utils/chapter1.cfg
@@ -180,16 +180,16 @@
 #define INTRO
   [story]
 		[part]
-			story= _ "Clare was a child of a peasant from a small village. She was friend with Lemyr a horseman from their childhood."
+			story= _ "Clare's early life was spent as a daughter of a simple peasant from a small village in the north of Wesnoth. She was close friends with a child called Lemyr, whose life dream was to become a grand knight."
 		[/part]
 		[part]
-		  story= _ "She was very intelligent and so her parents sent her to Alduin Academy. She belonged into the best students. She completed her studies in nineteen."
+		  story= _ "It quickly became known that Clare was highly intelligent, and so her parents sent her to study magic at the Alduin Academy. She was one of the best students on the isle, and completed her studies at the young age of nineteen."
 		[/part]
 		[part]
-		  story= _ "After that she returned to her village to help its inhabitants."
+		  story= _ "Once her studies were complete, Clare returned to her home village to help out however she could, and improve her magic is possible. The village was peaceful and prosperous."
 		[/part]
 		[part]
-		  story= _ "They lived their pecaceful lifes unil one day..."
+		  story= _ "But it did not last. One day, the peace came to and end, as orcs were spotted on the distant horizon."
 		[/part]
 	[/story]
 #enddef
