--- a/For_Power/units/Clare_Lich.cfg
+++ b/For_Power/units/Clare_Lich.cfg
@@ -613,9 +613,9 @@
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
   [advancement]
+    id=movement2
     max_times=5
     always_display=yes
-    id=movement2
     description= _ "more dextrous (2% better defences on all terrains)"
     image=icons/jewelry_butterfly_pin.png
     strict_amla=yes
@@ -645,6 +645,7 @@
   [advancement]
     id=armour
     max_times=5
+    always_display=yes
     description= _ "better protected from magical attacks (3% better resistances)"
     image=icons/magical_shield.png
     strict_amla=yes
