wescamp.py: Update from add-on server

--- a/For_Power/mainline-strings.cfg
+++ b/For_Power/mainline-strings.cfg
@@ -23,8 +23,8 @@ _"lance"
 _"entangle"
 #enddef
 
-#define STR_DARK_SORCERER
-_ "female^Dark Sorcerer"
+#define STR_DARK_SORCERESS
+_ "Dark Sorceress"
 #enddef
 
 #define STR_NECROMANCER
