--- a/For_Power/scenarios/01_Defend_the_village.cfg
+++ b/For_Power/scenarios/01_Defend_the_village.cfg
@@ -137,23 +137,23 @@
 		[/role]
 		[message]
 			role=reporter
-			message=_"Commander, some orcs are camping in the north."
+			message=_"Commander, a warband of Orcs has been spotted due north of here."
 		[/message]
 		[message]
 			speaker=Glacyn
-			message=_"We can't let them destroy our village! Men, to arms!"
+			message=_"We can't let the fiends raze our village! Men, to arms!"
 		[/message]
     [message]
 			speaker=Clare
-			message=_"I will help if you let me."
+			message=_"Me and my friends shall help, if you permit us to do so."
 		[/message]
 		[message]
 			speaker=Glacyn
-			message=_"Yes, but be careful."
+			message=_"Very well, but be careful. You mages are too valuable to lose."
 		[/message]
 		[message]
 			speaker=Lemyr
-			message=_"Do not worry. I will protect her."
+			message=_"Worry not, Commander - I shall protect her."
 		[/message]
 	[/event]
 	
@@ -164,7 +164,7 @@
 	  [/filter]
 	  [message]
 			speaker=orc2
-			message=_"I knew he was weak. Orcs, under my banner!"
+			message=_"Bah! He was weak and deserved to die! Orcs, to me!"
 		[/message]
 		[if]
 		  [have_unit]
@@ -201,11 +201,11 @@
 	  name=enemies defeated
 	  [message]
 			speaker=Clare
-			message=_"We did it."
+			message=_"We did it. The orcs are defeated!"
 		[/message]
 		[message]
 			speaker=Glacyn
-			message=_"Yes but too many good people died today."
+			message=_"That we did, but many good men lost their lives today."
 		[/message]
 		[endlevel]
 		  result=victory
@@ -223,6 +223,42 @@
 	  {DEFEAT}
 	[/event]
 	
-	{CHAPTER1_DEATHS}
+  [event]
+    name=last breath
+    [filter]
+      id=Lemyr
+    [/filter]
+    [message]
+      speaker=Clare
+      message=_"Lemyr! Wake up, wake up, please wake up."
+    [/message]
+    [message]
+      speaker=second_unit
+      message=_"Hahaha, the rider is dead human!"
+    [/message]
+    [message]
+      speaker=Clare
+      message=_"Nooooo!"
+    [/message]
+    {DEFEAT}
+  [/event]
+  
+  [event]
+    name=last breath
+    [filter]
+      id=Clare
+    [/filter]
+    [message]
+      speaker=Lemyr
+      message=_"I shall avenge you, my friend. No orc shall leave this field alive!"
+    [/message]
+    [message]
+      speaker=Glacyn
+      message=_"Without Clare, we cannot hope to win this battle."
+    [/message]
+    {DEFEAT}
+  [/event]
+  
+	{GLACYN_DEATH1}
 	{ORC_DONT_HIT_MAGE}
 [/scenario]
