--- a/For_Power/scenarios/02_Flight.cfg
+++ b/For_Power/scenarios/02_Flight.cfg
@@ -131,15 +131,15 @@
 		name=start
 		[message]
 			speaker=Lemyr
-			message=_"Noooo! More orcs are coming."
+			message=_"NO! More orcs are coming."
 		[/message]
 		[message]
 			speaker=Glacyn
-			message=_"We will never defeat them. We must send a messenger to to the earl. Lemyr, you have a horse. You must go."
+			message=_"These orcs are no mere warband - they are an army. We can’t win this fight. We must request aid from the Earl. Lemyr, you are our only rider - go, and fetch reinforcements."
 		[/message]
     [message]
 			speaker=Lemyr
-			message=_"Yes sir."
+			message=_"Yes, sir."
 		[/message]
 		{PLACE_IMAGE scenery/signpost.png 43 21}
 	[/event]
@@ -152,15 +152,15 @@
 		[/filter]
 		[message]
 			speaker=Glacyn
-			message=_"Bring more troops. We will try to hold them back."
+			message=_"Ride, Lemyr, and return with an army!"
 		[/message]
 		[message]
 			speaker=unit
-			message=_"Yes sir."
+			message=_"Yes, sir."
 		[/message]
 		[message]
 			speaker=Clare
-			message=_"Keep an eye on yourself."
+			message=_" Take care of yourself."
 		[/message]
     # keep side 2' gold for later
     [store_gold]
@@ -175,5 +175,47 @@
 		[/endlevel]
 	[/event]
 	
-	{CHAPTER1_DEATHS}
+  [event]
+    name=last breath
+    [filter]
+      id=Lemyr
+    [/filter]
+    [message]
+      speaker=Clare
+      message=_"Nooo!"
+    [/message]
+    [message]
+      speaker=Glacyn
+      message=_"Without his horseriding, we cannot hope to gain reinforcments in time."
+    [/message]
+    {DEFEAT}
+  [/event]
+  
+  [event]
+    name=last breath
+    [filter]
+      id=Clare
+    [/filter]
+    [message]
+      speaker=Lemyr
+      message=_"Leave the battle? Ha, I shall remain ‘till every last orc is dead to my spear!"
+    [/message]
+    {DEFEAT}
+  [/event]
+  
+	[event]
+    name=last breath
+    [filter]
+      id=Glacyn
+    [/filter]
+    [message]
+      speaker=unit
+      message=_"Argh! I must... live... must... command..."
+    [/message]
+    [message]
+      speaker=second_unit
+      message=_"Silence, human!"
+    [/message]
+    {DEFEAT}
+  [/event]
 [/scenario]
