--- a/For_Power/scenarios/03_The_Earl.cfg
+++ b/For_Power/scenarios/03_The_Earl.cfg
@@ -91,7 +91,7 @@
 		name=start
 		[message]
 			speaker=Lemyr
-			message=_"I am finally here."
+			message=_"I have made it."
 		[/message]
 		[move_unit]
 		  id=Lemyr
@@ -100,15 +100,15 @@
 		[/move_unit]
 		[message]
 			speaker=guard1
-			message=_"What do you want, rider?"
+			message=_"What is it you want, rider?"
 		[/message]
     [message]
 			speaker=Lemyr
-			message=_"I must speak with the earl. The orcs crowded our village."
+			message=_"I need an audience with the Earl. My village has come under attack by an orcish army."
 		[/message]
 		[message]
 			speaker=guard2
-			message=_"Ok. You can pass."
+			message=_"Very well. Procced down the hallway, the Earl’s throne lies at the far end."
 		[/message]
 		[move_unit]
 		  id=Lemyr
@@ -117,19 +117,19 @@
 		[/move_unit]
 		[message]
 			speaker=Lemyr
-			message=_"Hail Earl Menvan."
+			message=_"Hail Earl Menvan. I bear bad news!"
 		[/message]
 		[message]
 			speaker=earl
-			message=_"Why are you coming to me rider?"
+			message=_"What is this bad news you speak of, rider?"
 		[/message]
 		[message]
 			speaker=Lemyr
-			message=_"The orcs crowded our village sir."
+			message=_"Orcs besiege my village, my lord."
 		[/message]
 		[message]
 			speaker=earl
-			message=_"Orcs?! We must send them to the hell! I will give you some troops serving under Rheran."
+			message=_"Acursed orcs! We must send them to the land of the dead! Rheran, take your troops and save the village."
 		[/message]
 		[unit]
       type=Lieutenant
@@ -144,11 +144,19 @@
     [/unit]
     [message]
 			speaker=Rheran
-			message=_"Yes sir."
+			message=_"Sir."
 		[/message]
 		[message]
 			speaker=Lemyr
-			message=_"Thank you sir."
+			message=_"I thank you, my lord."
+		[/message]
+    [message]
+			speaker=earl
+			message=_"Rider, wait. I shall knight you for your brave service."
+		[/message]
+    [message]
+			speaker=Lemyr
+			message=_"Thank you, my lord."
 		[/message]
 		{MODIFY_UNIT id=Rheran side 1}
 		[endlevel]
