--- a/For_Power/scenarios/04_Return.cfg
+++ b/For_Power/scenarios/04_Return.cfg
@@ -272,15 +272,15 @@
     {SET_TERRAIN 44 29 Ce}
 		[message]
 			speaker=Lemyr
-			message=_"We are back. But our village is besieged. This is not good."
+			message=_"We have arrived, but this is not good news. The orcs have crossed the river!"
 		[/message]
 		[message]
 			speaker=Rheran
-			message=_"Don't worry. We will send our riders. They will help your people."
+			message=_"Worry not. My riders shall eliminate the orcs this side of the river, then we shall drive them back!"
 		[/message]
 		[message]
 			speaker=Rheran
-			message=_"Riders, charge!"
+			message=_"Riders, charge! Send the orcs back to where they hail from!"
 		[/message]
 		{RIDER 41 27 rider1}
 		{RIDER 41 28 rider2}
@@ -312,15 +312,15 @@
 		{ATTACK_AND_KILL rider4 21 30 melee}
     [message]
 			speaker=Glacyn
-			message=_"Is it you Lemyr? Thanks gods. We thought we were doomed."
+			message=_"I thank you, Sir Lemyr, for bringing us reinforcments."
 		[/message]
 		[message]
 			speaker=Lemyr
-			message=_"You are welcome. Let us destroy the rest of them."
+			message=_"Anything for my village. Now, let us slay these vile orcs!"
 		[/message]
 		[message]
 			speaker=Clare
-			message=_"Yes we will avenge our dead."
+			message=_"Yes, we shall avenge our dead, may they rest in peace."
 		[/message]
 	[/event]
 
