--- a/For_Power/scenarios/14b_More_Power.cfg
+++ b/For_Power/scenarios/14b_More_Power.cfg
@@ -77,7 +77,7 @@
 		[/message]
 		[message]
 		  speaker=Clare
-		  message=_"Do you mean to becaming a lich?"
+		  message=_"Do you want me to become a lich?"
 		[/message]
 		[message]
 		  speaker=Haldar
