--- a/For_Power/scenarios/15a_Back_Home.cfg
+++ b/For_Power/scenarios/15a_Back_Home.cfg
@@ -155,8 +155,8 @@
 	  [/message] # he loved her for the years before this campaign begun
 	  [message]
 	    id=Clare
-	    message=_"I love you too, Lemyr. I do not know how did it happendm but it is truth."
-	  [/message] # I don't know it too yet but the things sometime happend
+	    message=_"I love you too, Lemyr. I do not know how did it happened but it is truth."
+	  [/message] # I don't know it as well yet but the things sometime happend
 	  [message]
 	    id=Lemyr
 	    message=_"It is the happiest day in my life."
