--- a/For_Power/scenarios/15b_The_Poison.cfg
+++ b/For_Power/scenarios/15b_The_Poison.cfg
@@ -276,7 +276,7 @@
 	  [/message]
 	  [message]
 	    speaker=noble
-	    message=_"You slayew the dragon. All hail ..."
+	    message=_"You slew the dragon. All hail ..."
 	  [/message]
 	  [message]
 	    speaker=Clare
