--- a/For_Power/scenarios/Epilogue_a.cfg
+++ b/For_Power/scenarios/Epilogue_a.cfg
@@ -43,7 +43,7 @@
       story = _ "After defeating the sovereign the orcs continued a civil war and stopped to attack human's villages."
     [/part]
     [part]
-      story = _ "The villages what they destroyed was rebuilt and humans settled them again. Peace was ruling the Norhnlands."
+      story = _ "The villages what they destroyed was rebuilt and humans settled them again. Peace was ruling the Northlands."
     [/part]
     [part]
       story = _ "Clare and Lemyr lived peacefuly in their village and were happy. And nothing could break it."
