--- a/For_Power/units/Clare_Lich.cfg
+++ b/For_Power/units/Clare_Lich.cfg
@@ -290,7 +290,7 @@
     description= _ "creating undead with staff"
     image=attacks/staff-ruby.png
     strict_amla=yes
-    require_amla="staff1,staff2"
+    require_amla="staff1,staff2,mysteryofdeath"
 	  [effect]
 		  apply_to=attack
 		  name=staff
@@ -613,9 +613,9 @@
 	  {GREATER_AMLA_DEFAULT_BONUSES}
   [/advancement]
   [advancement]
-    id=movement2
     max_times=5
     always_display=yes
+    id=movement2
     description= _ "more dextrous (2% better defences on all terrains)"
     image=icons/jewelry_butterfly_pin.png
     strict_amla=yes
