--- a/For_Power/units/Dark Sorceress.cfg
+++ b/For_Power/units/Dark Sorceress.cfg
@@ -2,7 +2,7 @@
 
 [unit_type]
   id=Clare_Dark Sorceress
-  name={STR_DARK_SORCERER}
+  name={STR_DARK_SORCERESS}
   gender=female
   [base_unit]
     id=Dark Sorcerer
