--- a/For_Power/utils/chapter1.cfg
+++ b/For_Power/utils/chapter1.cfg
@@ -169,12 +169,7 @@
 #enddef
 
 #define ORC_DONT_HIT_MAGE
-  {FORCE_CHANCE_TO_HIT race=orc type=Mage 20 (
-         [variable]
-             name=turn_number
-             greater_than=1
-         [/variable]
-     )}
+  {FORCE_CHANCE_TO_HIT race=orc type=Mage 20 ()}
 #enddef
 
 #define INTRO
@@ -197,7 +192,7 @@
 #define STORY2
   [story]
     [part]
-	    story= _ "They defeated the orcs but they found out soon that it was only a vanguard."
+	    story= _ "The Orcs were defeated, but Glacyn’s scouts quickly discovered that the orcs they defeated were a mere vanguard."
   	[/part]
   [/story]
 #enddef
@@ -205,7 +200,7 @@
 #define STORY3
   [story]
     [part]
-	    story= _ "Lemyr ran as fast as he can and next afternoon finally arrived to the earl's castle."
+	    story= _ " Lemyr galloped over the land with his trusty horse Thunder, and reached the Earl’s castle by afternoon the next day."
   	[/part]
   [/story]
 #enddef
@@ -213,10 +208,10 @@
 #define STORY4
   [story]
     [part]
-	    story= _ "On their way back Rheran teached Lemyr some tricks with a sword."
+	    story= _ "As the army double marched north to the village, Rheran taught Lemyr to wield a sword, and equipped him and Thunder with equipment befitting a knight."
   	[/part]
   	[part]
-	    story= _ "But when they arrived to the village they didn't have a nice view."
+	    story= _ "When the army crested the final hill, an ugly sight awaited their tired eyes."
   	[/part]
   [/story]
 #enddef
