--- a/For_Power/utils2/story.cfg
+++ b/For_Power/utils2/story.cfg
@@ -47,7 +47,7 @@
 #define STORY6
   [story]
     [part]
-      story = _ ""
+      story = _ "Clare found someone to care for the land in her absence and with some earl's soldiers went to Dwarven Doors."
     [/part]
   [/story]
 #enddef
