wescamp.py: Update from add-on server

--- a/For_Power/_main.cfg
+++ b/For_Power/_main.cfg
@@ -18,6 +18,15 @@
       name="Dugi"
     [/entry]
   [/about]
+  [about]
+    title= _ "Text revision:"
+    [entry]
+      name="Flameslash"
+    [/entry]
+    [entry]
+      name="Dugi"
+    [/entry]
+  [/about]
 #enddef
 
 [campaign]
