--- a/For_Power/scenarios/09b_Learning_Dark_Arts.cfg
+++ b/For_Power/scenarios/09b_Learning_Dark_Arts.cfg
@@ -24,7 +24,7 @@
 	map_data="{~add-ons/For_Power/maps/The_Cave.map}"
 	next_scenario=10b_Skeletons
 	snapshot=no
-	turns=20
+	turns=12
 	{SCENARIO_MUSIC underground.ogg}
 	{STORY9b}
 	victory_when_enemies_defeated=no
@@ -283,7 +283,7 @@
 	  name=time over
 	  [message]
 		  speaker=Haldar
-		  message=_"If you can't defeat some zombies how do you want to kill your orc?"
+		  message=_"If you cannot defeat some zombies how do you want to kill your orc?"
 		[/message]
 		{DEFEAT}
 	[/event]
