--- a/For_Power/scenarios/10b_Skeletons.cfg
+++ b/For_Power/scenarios/10b_Skeletons.cfg
@@ -22,7 +22,7 @@
 	map_data="{~add-ons/For_Power/maps/The_Cave2.map}"
 	next_scenario=11b_Ghosts
 	snapshot=no
-	turns=30
+	turns=15
 	{SCENARIO_MUSIC underground.ogg}
 	#{STORY10b} no story
 	victory_when_enemies_defeated=no
@@ -48,7 +48,7 @@
 	[side]
 	  side=2
 	  controller=ai
-	  team_name=mages,zombies
+	  team_name=mages,skeletons
 	  user_team_name= _ "Haldar"
 	  
 	  type=Necromancer
@@ -68,7 +68,7 @@
 	[side]
 	  side=3
 	  controller=ai
-	  team_name=zombies
+	  team_name=skeletons
 	  user_team_name= _ "Skeletons"
 	  no_leader=yes
 	  
@@ -242,6 +242,14 @@
 		  {NEW_GOLD_CARRYOVER 40}
 		[/endlevel]
 	[/event]
+  
+  [event]
+    name=time over
+    [message]
+      speaker=Haldar
+      message=_"What are you still doing, Clare? Is this too hard for you?"
+    [/message]
+  [/event]
 [/scenario]
 
 #unddef SKELETON
