--- a/For_Power/scenarios/11b_Ghosts.cfg
+++ b/For_Power/scenarios/11b_Ghosts.cfg
@@ -19,7 +19,7 @@
 	map_data="{~add-ons/For_Power/maps/The_Cave2.map}"
 	next_scenario=12_An_Orchish_Town
 	snapshot=no
-	turns=30
+	turns=15
 	{SCENARIO_MUSIC underground.ogg}
 	{STORY11b}
 	victory_when_enemies_defeated=no
@@ -247,7 +247,7 @@
 	  name=completed
 	  [message]
 		  speaker=Haldar
-		  message=_"I knew that you can handle them. Now your studies are completed. I can make a diplom for you."
+		  message=_"I knew that you could handle them. Now your studies are completed. I can make a diplom for you."
 		[/message]
 		[message]
 		  speaker=Clare
@@ -279,6 +279,14 @@
 		  {NEW_GOLD_CARRYOVER 40}
 		[/endlevel]
 	[/event]
+  
+  [event]
+    name=time over
+    [message]
+      speaker=Haldar
+      message=_"You have lost too much time. More trolls are coming."
+    [/message]
+  [/event]
 [/scenario]
 
 #unddef TROLL
