--- a/For_Power/scenarios/18a_The_Last_battle.cfg
+++ b/For_Power/scenarios/18a_The_Last_battle.cfg
@@ -619,6 +619,14 @@
 		[/endlevel]
   [/event]
   
+  [event]
+    time=time over
+    [message]
+      speaker=earl
+      message=_"Three legions of orcs arrived. There is no hope to defeat them now."
+    [/message]
+  [/event]
+  
   {CLARES_DEATH1}
   {LEMYRS_DEATH1}
   {TINRY_DEATH2}
