--- a/For_Power/scenarios2/06_Dwarven_Doors.cfg
+++ b/For_Power/scenarios2/06_Dwarven_Doors.cfg
@@ -562,7 +562,7 @@
       type=Fencer
       message=_"So what is your answer?"
     [/message]
-    [mesage]
+    [message]
       type=Swordsman
       message=_"I am not sure, sir. It is forbidden."
     [/message]
