--- a/For_Power/utils2/story.cfg
+++ b/For_Power/utils2/story.cfg
@@ -51,3 +51,22 @@
     [/part]
   [/story]
 #enddef
+
+#define STORY9
+  [story]
+    [part]
+      story = _ "After defeating undeads Clare explained the matter with earl Menvan to Merissa and Tinry. They understood it."
+    [/part]
+    [part]
+      story = _ "After that Clare went back to Dwarven Doors with her army."
+    [/part]
+  [/story]
+#enddef
+
+#define STORY10
+  [story]
+    [part]
+      story = _ "They arrived to Dwarven Doors but saw something wrong."
+    [/part]
+  [/story]
+#enddef
